# raspi-k8s

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  MODULE.bazel  pyrightconfig.json  requirements-dev.txt  requirements.txt  requirements_lock.txt  system_design.md
doc/: commands-bazel.md  learning-guide.md  manual-local-test.md  step-1-bazel.md  step-2-proto.md  step-3-daemon.md  step-3-grpc-service.md  step-4-dockerfile.md  step-4b-rules-oci.md  step-5-k8s-manifests.md  step-5a-pi-k3s-setup.md  step-6-ansible.md
host/deploy/ansible/group_vars/: all.yml
host/deploy/ansible/playbooks/: deploy-time-daemon.yml
host/sw/time/: BUILD.bazel  Dockerfile  client.py  daemon.py
host/sw/time/proto/: BUILD.bazel  time_service.proto  time_service_pb2.py  time_service_pb2.pyi  time_service_pb2_grpc.py  time_service_pb2_grpc.pyi
k8s/: namespace.yaml
k8s/time/: deployment.yaml  service.yaml
scripts/: gen_time_proto.sh
tools/: BUILD.bazel  gen_proto.py
