load("@pip//:requirements.bzl", "requirement")

# Proto generation tool used by shell scripts (scripts/gen_time_proto.sh).
# Also usable as a Bazel target:
#   bazel run //tools:gen_proto -- <proto_file> <output_dir>
py_binary(
    name = "gen_proto",
    srcs = ["gen_proto.py"],
    deps = [
        requirement("grpcio-tools"),
    ],
    visibility = ["//visibility:public"],
)
