load("@pip//:requirements.bzl", "requirement")

# gRPC server: reads system time and returns it to clients.
py_binary(
    name = "daemon",
    srcs = ["daemon.py"],
    deps = [
        "//host/sw/time/proto:time_service_proto",
        requirement("grpcio"),
    ],
    visibility = ["//visibility:public"],
)

# gRPC client: connects to the daemon and prints the returned time.
py_binary(
    name = "client",
    srcs = ["client.py"],
    deps = [
        "//host/sw/time/proto:time_service_proto",
        requirement("grpcio"),
    ],
    visibility = ["//visibility:public"],
)
