load("@pip//:requirements.bzl", "requirement")

# genrule：執行 tools/gen_proto，把 .proto 轉成 Python 程式碼
genrule(
    name = "gen_time_proto",
    srcs = ["time_service.proto"],
    outs = [
        "time_service_pb2.py",
        "time_service_pb2_grpc.py",
    ],
    cmd = "$(location //tools:gen_proto) $(location time_service.proto) $(RULEDIR)",
    tools = ["//tools:gen_proto"],
)

# py_library：把產生的 Python 檔包裝成可被其他 target 引用的函式庫
py_library(
    name = "time_service_proto",
    srcs = [
        "time_service_pb2.py",
        "time_service_pb2_grpc.py",
    ],
    # imports = ["."] 讓 Python 可以直接 import time_service_pb2
    # 不需要寫完整路徑 host.sw.time.proto.time_service_pb2
    imports = ["."],
    deps = [
        requirement("grpcio"),
        requirement("protobuf"),
    ],
    visibility = ["//visibility:public"],
)
